--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="../dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/mockman-js@latest/dist/style.css" />
     <title>Zitter</title>
   </head>
   <body>
